# bort

./: .clang-tidy  .gitignore  .gitmodules  ASTDebugInfo_8hpp.html  ASTDebugInfo_8hpp.js  ASTDebugInfo_8hpp__dep__incl.map  ASTDebugInfo_8hpp__dep__incl.md5  ASTDebugInfo_8hpp__incl.map  ASTDebugInfo_8hpp__incl.md5  ASTDebugInfo_8hpp_source.html  ASTNode_8cpp.html  ASTNode_8cpp__incl.map  ASTNode_8cpp__incl.md5  ASTNode_8hpp.html  ASTNode_8hpp.js  ASTNode_8hpp__dep__incl.map  ASTNode_8hpp__dep__incl.md5  ASTNode_8hpp__incl.map  ASTNode_8hpp__incl.md5  ASTNode_8hpp_source.html  ASTPrinter_8cpp.html  ASTPrinter_8cpp.js  ASTPrinter_8cpp__incl.map  ASTPrinter_8cpp__incl.md5  ASTPrinter_8hpp.html  ASTPrinter_8hpp.js  ASTPrinter_8hpp__dep__incl.map  ASTPrinter_8hpp__dep__incl.md5  ASTPrinter_8hpp__incl.map  ASTPrinter_8hpp__incl.md5  ASTPrinter_8hpp_source.html  ASTVisitor_8cpp.html  ASTVisitor_8cpp__incl.map  ASTVisitor_8cpp__incl.md5  ASTVisitor_8hpp.html  ASTVisitor_8hpp.js  ASTVisitor_8hpp__dep__incl.map  ASTVisitor_8hpp__dep__incl.md5  ASTVisitor_8hpp__incl.map  ASTVisitor_8hpp__incl.md5  (+2079 more)
.github/workflows/: cmake-multi-platform.yml  doxygen-gh-pages.yml
docs/: Doxyfile
include/bort/AST/: ASTDebugInfo.hpp  ASTNode.hpp  ASTVisitor.hpp  BinOpExpr.hpp  Block.hpp  BreakStmt.hpp  ContinueStmt.hpp  DumpCommons.hpp  ExpressionNode.hpp  ExpressionStmt.hpp  FunctionCallExpr.hpp  FunctionDecl.hpp  GotoStmt.hpp  IfStmt.hpp  IfStmtNode.hpp  IndexationExpr.hpp  InitializerList.hpp  LabelStmt.hpp  NumberExpr.hpp  ReturnStmt.hpp  SymbolResolveVisitor.hpp  UnaryOpExpr.hpp  VarDecl.hpp  VariableExpr.hpp  WhileStmt.hpp
include/bort/AST/Visitors/: ASTPrinter.hpp  ASTVisitor.hpp  NodeSubstitutionVisitor.hpp  SymbolResolutionVisitor.hpp  TypePropagationVisitor.hpp  Utils.hpp
include/bort/Basic/: Assert.hpp  Casts.hpp  Ref.hpp  VisitDispatcher.hpp
include/bort/CLI/: CLIOptions.hpp  IO.hpp
include/bort/Codegen/: BackendInstance.hpp  Instinsics.hpp  InstructionVisitorBase.hpp  Intrinsics.hpp  LoadInst.hpp  MachineRegister.hpp  RARSMacroCallInst.hpp  RISCVCodegen.hpp  RISCVPrinter.hpp  StoreInst.hpp  Utils.hpp  ValueLoc.hpp
include/bort/Frontend/: FrontEndInstance.hpp  FrontendInstance.hpp  FrontendOptions.hpp  InputFile.hpp  SourceFile.hpp  SourceLocation.hpp  Symbol.hpp  Type.hpp
include/bort/IR/: AllocaInst.hpp  BasicBlock.hpp  BranchInst.hpp  CallInst.hpp  Constant.hpp  GepInst.hpp  GlobalValue.hpp  IRCodegen.hpp  IRPrinter.hpp  Instruction.hpp  InstructionTypeList.hpp  Label.hpp  LoadInst.hpp  Metadata.hpp  MiddleEndInstance.hpp  Module.hpp  MoveInst.hpp  OpInst.hpp  Register.hpp  RetInst.hpp  StoreInst.hpp  UnaryInst.hpp  Value.hpp  ValueLoc.hpp  VariableUse.hpp
include/bort/Lex/: Lexer.hpp  Preprocessor.hpp  Token.def  Token.hpp  Tokens.def  Utils.hpp
include/bort/Parse/: ASTNode.hpp  Parser.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  concepts_0.js  (+87 more)
src/AST/: ASTNode.cpp  ASTVisitor.cpp  BinOpExpr.cpp  Block.cpp  ExpressionNode.cpp  NumberExpr.cpp  UnaryOpExpr.cpp  VarDecl.cpp  VariableExpr.cpp
src/AST/Visitors/: ASTPrinter.cpp  ASTVisitor.cpp  NodeSubstitutionVisitor.cpp  SymbolResolutionVisitor.cpp  TypePropagationVisitor.cpp
src/CLI/: IO.cpp  Main.cpp
src/Codegen/: BackendInstance.cpp  InstructionVisitor.cpp  Intrinsics.cpp  RISCVCodegen.cpp  RISCVPrinter.cpp  Utils.cpp  ValueLoc.cpp
src/Frontend/: FrontendInstance.cpp  InputFile.cpp  SourceFile.cpp  Symbol.cpp  Type.cpp
src/IR/: BasicBlock.cpp  GlobalValue.cpp  IRCodegen.cpp  IRPrinter.cpp  Instruction.cpp  Label.cpp  MiddleEndInstance.cpp  Module.cpp  Value.cpp  ValueLoc.cpp  VariableUse.cpp
src/Lex/: Lexer.cpp  Preprocessor.cpp  Token.cpp  Utils.cpp
src/Parse/: ASTNode.cpp  Parser.cpp
tests/: CMakeLists.txt  smoke.py  smoke.sh
tests/corpus/: arrays.c  basic.c  expression.c  functions.c  globals.c  goto.c  loops.c  pointers.c
